--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-language: objective-c
-osx_image: xcode7.3
+os:
+  - osx
+language: generic
+osx_image: xcode8
 script:
   - xcodebuild -scheme TABResourceLoader -configuration Debug -sdk iphonesimulator9.3 -destination "OS=9.3,name=iPad 2" test -enableCodeCoverage YES
 after_success:
