--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ os:
 language: generic
 osx_image: xcode8
 script:
-  - xcodebuild -scheme TABResourceLoader -configuration Debug -sdk iphonesimulator9.3 -destination "OS=9.3,name=iPad 2" test -enableCodeCoverage YES
+  - xcodebuild -scheme TABResourceLoader -configuration Debug -sdk iphonesimulator10.0 -destination "OS=10.0,name=iPhone 6s" test -enableCodeCoverage YES
 after_success:
   - bash <(curl -s https://codecov.io/bash)
