--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
 language: generic
 osx_image: xcode8.3
 script:
-  - xcrun instruments -t 'Blank' -l 10 -w "iPhone 6s (10.3)"
+  # - xcrun instruments -t 'Blank' -l 10 -w "iPhone 6s (10.3)"
   - xcodebuild -scheme Example -configuration Debug -sdk iphonesimulator10.3 -destination "OS=10.3,name=iPhone 6s" build
   - xcodebuild -scheme TABResourceLoader -configuration Debug -sdk iphonesimulator10.3 -destination "OS=10.3,name=iPhone 6s" test -enableCodeCoverage YES
 after_success:
